--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
   <head>
     <title>aero</title>
+    <style>
+      @import url("css/style.css")
+    </style>
   </head>
-
+  <body>
+    <footer>
+      <div class="glass" height="5%" width="100%">
+        <h1>hi</h1>
+      </div>
+    </footer>
+  </body>
 </html>
