--- a/setbg.html
+++ b/setbg.html
@@ -36,5 +36,6 @@
     <br>
     <input type="radio" id="_15" name="bg" value="background/15.jpg">15</input>
     <input type="radio" id="_16" name="bg" value="background/16.jpg">16</input>
+    <button onclick="getSelectedRadio()">Save</button>
   </body>
 </html>
