--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       @import url("css/style.css")
     </style>
+    <script src="js/background.js"></script>
   </head>
   <body>
     <footer>
