--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </style>
     <script src="js/background.js"></script>
   </head>
-  <body>
+  <body onload="bgset()">
     <footer>
       <div class="glass" height="5%" width="100%">
         <h1>hi</h1>
