--- a/setbg.html
+++ b/setbg.html
@@ -12,7 +12,7 @@
       }
     </script>
   </head>
-  <body>
+  <body onload="bgset()">
     <input type="radio" id="_1" name="bg" value="background/1.jpg">1</input>
     <input type="radio" id="_2" name="bg" value="background/2.jpg">2</input>
     <br>
