--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body onload="bgset()">
     <footer>
       <div class="glass" height="5%" width="100%">
-        <h1>hi</h1>
+        <button class="glass" onclick="location.href = 'Cranky-dev.github.io/aero/browse.html'">Inet</button> 
       </div>
     </footer>
   </body>
