Update and rename browse-barebones.html to browse.html

--- a/browse.html
+++ b/browse.html
@@ -12,7 +12,7 @@
       }
     </script>
   </head>
-  <body style="background-color: blue;">
+  <body onload="bgset()">
     <div class="glass">
       <h1>Browser</h1>
     </div>
