--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body onload="bgset()">
     <footer>
       <div class="glass" height="5%" width="100%">
-        <button onclick="location.href = 'Cranky-dev.github.io/aero/browse.html'">Inet</button>
-        <button onclick="location.href = 'Cranky-dev.github.io/aero/setbg.html'">Inet</button>
+        <button class="glass" onclick="location.href = 'https://cranky-dev.github.io/aero/browse.html'">Inet</button>
+        <button class="glass" onclick="location.href = 'https://cranky-dev.github.io/aero/browse.html'">Background</button>
       </div>
     </footer>
   </body>
