--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <footer>
       <div class="glass" height="5%" width="100%">
         <button class="glass" onclick="location.href = 'https://cranky-dev.github.io/aero/browse.html'">Inet</button>
-        <button class="glass" onclick="location.href = 'https://cranky-dev.github.io/aero/browse.html'">Background</button>
+        <button class="glass" onclick="location.href = 'https://cranky-dev.github.io/aero/setbg.html'">Background</button>
       </div>
     </footer>
   </body>
