--- a/setbg.html
+++ b/setbg.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="js/background.js"></script>
     <script>
       let output = document.getElementById("output");
       function getSelectedRadio() {
